Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29087

To call raise() on an application's main window doesn't raise it on OS X

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0 Beta1
    • 5.0.0
    • Widgets: Main Window
    • None
    • OS X 10.8.2
    • macOS
    • ecd70c038ab06e8066710b89fe9f3bf841f72111

    Description

      If your application's main window is 'hidden' behind other applications and you then call:

      activateWindow();
      raise();

      You would expect to show up in front of all the other applications, and this is the case on Linux (Windows is a different story, as explained in the Qt documentation). However, on OS X, the application still remains behind the other applications. In other words, it would seem that raise() has no effect whatsoever on the application. FWIW, it used to be fine using Qt 4.8.x.

      Attached is the source code of a small application which illustrates the issue. Build it, start it and hide it behind some other applications. 3 seconds later, it will try to raise itself, and will do it again 3 seconds later, etc.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            agarny Alan Garny
            Votes:
            6 Vote for this issue
            Watchers:
            13 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes