Cocoa: call SetFrontProcess on raise()

This will raise the window in front of windows from
other processes as well. Following Qt 4, only do this
for top-level windows.

Task-number: QTBUG-29087
Change-Id: Iae1b9c2928a627501112f97728198ed6dd614b2d
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>